# topological_navigation

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: run.sh  (+4 more)
bayesian_topological_localisation/: CHANGELOG.rst  CMakeLists.txt  README.md  README.md.orig  package.xml  setup.cfg  setup.py
bayesian_topological_localisation/launch/: topological_localisation.launch
bayesian_topological_localisation/msg/: DistributionStamped.msg  LikelihoodObservation.msg
bayesian_topological_localisation/scripts/: localisation_node.py
bayesian_topological_localisation/srv/: LocaliseAgent.srv  Predict.srv  StopLocalise.srv  UpdateLikelihoodObservation.srv  UpdatePoseObservation.srv  UpdatePriorLikelihoodObservation.srv
topological_navigation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
topological_navigation/action/: GotoNode.action
topological_navigation/config/: bt_tree_default.xml  bt_tree_goal_align.xml  bt_tree_in_row.xml  bt_tree_in_row_operation.xml  move_base_goal.yaml  navigation_goal.yaml  sample_edge_reconfig_groups.yaml
topological_navigation/launch/: minimal_topological_navigation.launch  reconf_at_edges_server.launch  restriction_handling_example.launch.xml  restrictions.launch.py  test_new_service.launch  topo_nav_global.launch  topo_nav_local.launch  topological_extras.launch  topological_map_edition.launch  topological_map_manager2_central.launch  topological_map_visualise.launch  topological_navigation.launch  topological_navigation2_robot_vogui.launch  topological_navigation_empty_map.launch  topological_restrictions_multirobot.launch  vogui_manual_topomapping.launch
topological_navigation/maps/: test.tmap2
topological_navigation/resources/: template_edge.yaml  template_node_2.yaml  tmapping_config.rviz
topological_navigation/scripts/: TopologicalTransformPublisher.py  execute_policy_server.py  get_distances_between_nodes.py  get_distances_between_points.py  get_simple_policy.py  go_to_node.py  localisation.py  manual_edge_predictions.py  manual_topomapping.py  map_converter.py  map_manager.py  map_manager2.py  mean_based_prediction.py  nav_client.py  navigation.py  navigation.py~  navstats_loger.py  navstats_logger.py  reconf_at_edges_server.py  restrictions_manager.py  search_route.py  speed_based_prediction.py  test_top_pred.py  topological_prediction.py  topological_transform_publisher.py  travel_time_estimator.py  visualise_map.py  visualise_map2.py
topological_navigation/test/: static_transformer.py  test_navigationcore.py
topological_navigation/tests/: map_manager.test  map_manager_tester.py  navigation_scenarios.test  navigation_test_joypad_control.py  restrictions.test  restrictions_tester.py  scenario_server.py  topological_navigation_tester_critical.py  topological_navigation_tester_supplementary.py  travel_time_tester.py
topological_navigation/tmaps/: tmap_5corridors_2sides_dense_LL_onlymovebase.tmap2  tmap_5corridors_2sides_dense_LL_row_change.tmap2  tmap_5corridors_dense_LL_onlymovebase.tmap2  tmap_certh_vogui.tmap2  tmap_certh_vogui_2sides_policies.tmap2
topological_navigation/topological_navigation/: edge_action_manager.py  edge_action_manager2.py  edge_controller.py  edge_reconfigure_manager2.py  manager2.py  marker_arrays.py  node_controller.py  policy_marker.py  policy_marker2.py  publisher.py  route_search2.py  testing.py  tmap_utils.py  topological_map.py  topomap_marker.py  topomap_marker2.py
topological_navigation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
topological_navigation_msgs/action/: BuildTopPrediction.action  ExecutePolicyMode.action
topological_navigation_msgs/msg/: AddEdgeReq.msg  AddNodeReq.msg  ClosestEdges.msg  DistanceBetweenNodes.msg  ExecutePolicyModeFeedback.msg  ExecutePolicyModeGoal.msg  GotoNodeFeedback.msg  LikelihoodObservation.msg  MoveActionStatus.msg  NavRoute.msg  NavStatistics.msg  ParticlesState.msg  PoseObservation.msg  SetInfluenceZoneReq.msg  TopologicalMap.msg  UpdateEdgeConfigReq.msg
topological_navigation_msgs/srv/: AddDatum.srv  AddEdge.srv  AddEdgeArray.srv  AddNode.srv  AddNodeArray.srv  EstimateTravelTime.srv  EvaluateEdge.srv  EvaluateNode.srv  GetDistancesBetweenNodes.srv  GetDistancesBetweenPoints.srv  GetRouteBetween.srv  GetRouteTo.srv  GetTopologicalMap.srv  Predict.srv  PredictEdgeState.srv  RestrictMap.srv  SatisfyRuntime.srv  SetFloat64.srv  SetInfluenceZone.srv  SetInfluenceZoneArray.srv  UpdateAction.srv  UpdateActionType.srv  UpdateEdge.srv  UpdateEdgeConfig.srv  UpdateEdgeConfigArray.srv  UpdateFailPolicy.srv  UpdateLikelihoodObservation.srv  UpdatePoseObservation.srv  UpdatePriorLikelihoodObservation.srv  UpdateRestrictions.srv  WriteTopologicalMap.srv
topological_rviz_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml  setup.py
topological_rviz_tools/launch/: strands_rviz_topmap.launch
topological_rviz_tools/scripts/: python_topmap_interface.py
topological_rviz_tools/src/: edge_controller.cpp  edge_controller.h  edge_property.cpp  edge_property.h  node_controller.cpp  node_controller.h  node_property.cpp  node_property.h  pose_property.cpp  pose_property.h  tag_controller.cpp  tag_controller.h  tag_property.cpp  tag_property.h  topmap_manager.cpp  topmap_manager.h  topological_edge_tool.cpp  topological_edge_tool.h  topological_map_panel.cpp  topological_map_panel.h  topological_node_tool.cpp  topological_node_tool.h
topological_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
topological_utils/config/: goal.yaml
topological_utils/launch/: dummy_topological_navigation.launch  topological_map_edition.launch  topological_prediction_test.launch
topological_utils/scripts/: add_content.py  add_node_tags.py  draw_predicted_map.py  dummy_topological_navigation.py  edge_length_analysis.py  edge_reconf_groups_to_tmap2.py  evaluate_predictions.py  goal_converter.py  insert_empty_map.py  list_maps  load_json_map.py  map_converter.py  map_export.py  map_to_json.py  map_to_yaml.py  node_metadata.py  plot_topo_map.py  plot_topo_map2.py  visualise_map.py  waypoints_to_yaml_tmap.py
(+165 files in other folders)
