<?xml version="1.0"?>
<package format="3">
  <name>bayesian_topological_localisation</name>
  <version>2.4.0</version>
  <description>The bayesian_topological_localisation package</description>


  <maintainer email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</maintainer>

  <author>Francesco Del Duchetto</author>

  <license>MIT</license>

  <!--   <test_depend>gtest</test_depend> -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>topological_navigation</depend>
</package>
