<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bayesian_topological_localisation</name>
  <version>3.0.1</version>
  <description>The ros2 bayesian_topological_localisation package</description>

  <maintainer email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</maintainer>
  <maintainer email="jheselden@lincoln.ac.uk">James R Heselden</maintainer>
  
  <author email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</author>

  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>topological_navigation</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

