<?xml version="1.0"?>
<package format="3">
  <name>topological_navigation</name>
  <version>2.4.0</version>
  <description>The topological_navigation package</description>


  <maintainer email="abinch@sagarobotics.com">Adam Binch</maintainer>

  <author>Jaime Pulido Fentanes</author>
  <author>Adam Binch</author>
  <author>Francesco Del Duchetto</author>

  <license>MIT</license>

  <!--   <test_depend>gtest</test_depend> -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>visualization_msgs</depend>
  <!-- <depend>rospy_message_converter</depend> -->
  <depend>topological_navigation_msgs</depend>
  <depend>tf2</depend>
</package>
