<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>topological_navigation</name>
  <version>2.4.0</version>
  <description>The topological_navigation package</description>

  <maintainer email="abinch@sagarobotics.com">Adam Binch</maintainer>

  <author>Jaime Pulido Fentanes</author>
  <author>Adam Binch</author>
  <author>Francesco Del Duchetto</author>

  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>ament_cmake</depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>topological_navigation_msgs</depend>

  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

