<?xml version="1.0"?>
<package>
  <name>topological_navigation_msgs</name>
  <version>2.3.0</version>
  <description>The topological_navigation_msgs package</description>

  <maintainer email="abinch@sagarobotics.com">Adam Binch</maintainer>
  <maintainer email="jpfentanes@sagarobotics.com">Jaime Pulido Fentanes</maintainer>

  <license>MIT</license>

  <author>Adam Binch</author>
  <author>Jaime Pulido Fentanes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <run_depend>message_runtime</run_depend>

  <export/>
</package>
