<?xml version="1.0"?>
<package format="3">
  <name>topological_navigation_msgs</name>
  <version>2.4.0</version>
  <description>The topological_navigation_msgs package</description>

  <maintainer email="abinch@sagarobotics.com">Adam Binch</maintainer>
  <maintainer email="jpfentanes@sagarobotics.com">Jaime Pulido Fentanes</maintainer>

  <license>MIT</license>

  <author>Adam Binch</author>
  <author>Jaime Pulido Fentanes</author>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
