<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>topological_navigation_msgs</name>
  <version>3.0.5</version>
  <description>The ros2 topological_navigation_msgs package</description>


  <maintainer email="jheselden@lincoln.ac.uk">James R Heselden</maintainer>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <author email="jheselden@lincoln.ac.uk">James R Heselden</author>
  <author email="abinch@sagarobotics.com">Adam Binch</author>
  <author email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</author>

  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>ament_cmake</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
