<package format="3">
  <name>topological_rviz_tools</name>
  <version>2.4.0</version>
  <description>
    Topological map construction
  </description>
  <maintainer email="staniasm@cs.bham.ac.uk">Michal Staniaszek</maintainer>
  <license>BSD</license>

  <author>Michal Staniaszek</author>

  <depend>qtbase5-dev</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rviz2</depend>
  <depend>topological_navigation_msgs</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
