<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>topological_utils</name>
  <version>2.4.0</version>
  <description>The topological_utils package</description>


  <maintainer email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</maintainer>
  <maintainer email="mhanheide@lincoln.ac.uk">Marc Hanheide</maintainer>
  <maintainer email="jheselden@lincoln.ac.uk">James R Heselden</maintainer>

  <author email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</author>
  <author email="contact@gauthampdas.com">Gautham P Das</author>

  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>topological_navigation_msgs</depend>
  <!-- <depend>topological_rviz_tools</depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
